--- a/Data/Final_notebook_display.ipynb
+++ b/Data/Final_notebook_display.ipynb
@@ -50,6 +50,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5a585be",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Senario:</b>\n",
+    "</br>\n",
+    "In the 2020-2021 school year, TEA required all Texas LEAs (Local Education Agencies such as a school district) to administer either the TX-KEA or mCLASS assessment to Kindergarten students in order to measure Kindergarten readiness. The Tx-KEA and mCLASS diagnostics employ different scales for scoring and evaluate different sets of skills. Initial analysis of Fall 2020 data indicates a 38 percentage point gap in Kindergarten readiness between the two tests; 76% of students who took Tx-KEA were found to be Kindergarten ready compared to just 38% of students who took mCLASS."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cba38225",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<b>Initial Hypotheses:</b>\n",
+    "</br>\n",
+    "\n",
+    "* Point gap in Kindergarden readiness between the two tests is due to one assessment having a larger proportion of students with a specifier (e.g. Eco Dis, English Learner, or Special Ed\n",
+    "</br>\n",
+    "\n",
+    "* Point gap is due to racial proportion differences between the two tests\n",
+    "</br>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "147c5b4a",
    "metadata": {},
    "source": [
@@ -183,7 +211,7 @@
    "id": "77f526b7",
    "metadata": {},
    "source": [
-    "The graph above shows that the proportion of students with each specifier is very similar across both tests indicating that the difference in kindergarden readiness is not likely to be due to one test having a higher proportion of students with specifiers."
+    "The graph above shows that the proportion of students with each specifier is very similar across both tests indicating that the point gap in kindergarden readiness is not likely to be due to one test having a higher proportion of students with specifiers."
    ]
   },
   {
@@ -315,9 +343,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cf939745",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Key Findings and Conclustion:</b>\n",
+    "</br>\n",
+    "\n",
+    "* Point gap difference is not due to difference is specifier proportion\n",
+    "</br>\n",
+    "\n",
+    "* Point gap difference is not due to difference in racial proportions`1`\n",
+    "</br>\n",
+    "\n",
+    "* use classification models to predict wine quality\n",
+    "\n",
+    "<b>Recommended next steps:<b>\n",
+    "    </br>\n",
+    "    \n",
+    "* collect data on schools e.g. accountability ratings, other standardardized test scores\n",
+    "* collect school id for txkea assessments to be able to compare scores across schools\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f39f800",
+   "id": "fc2255a8",
    "metadata": {},
    "outputs": [],
    "source": []
