--- a/Data/Final_notebook_display.ipynb
+++ b/Data/Final_notebook_display.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5a585be",
+   "id": "9a6f9254",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cba38225",
+   "id": "7015a8d4",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf939745",
+   "id": "79bb07ed",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
@@ -354,7 +354,7 @@
     "* Point gap difference is not due to difference is specifier proportion\n",
     "</br>\n",
     "\n",
-    "* Point gap difference is not due to difference in racial proportions`1`\n",
+    "* Point gap difference is not due to difference in racial proportions\n",
     "</br>\n",
     "\n",
     "* use classification models to predict wine quality\n",
@@ -363,6 +363,8 @@
     "    </br>\n",
     "    \n",
     "* collect data on schools e.g. accountability ratings, other standardardized test scores\n",
+    "</br>\n",
+    "\n",
     "* collect school id for txkea assessments to be able to compare scores across schools\n",
     "    "
    ]
@@ -370,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc2255a8",
+   "id": "dc3186c6",
    "metadata": {},
    "outputs": [],
    "source": []
