--- a/Data/Final_notebook_display.ipynb
+++ b/Data/Final_notebook_display.ipynb
@@ -351,7 +351,7 @@
     "<b>Key Findings and Conclustion:</b>\n",
     "</br>\n",
     "\n",
-    "* Point gap difference is not due to difference is specifier proportion\n",
+    "* Point gap difference is not due to difference in specifier proportion\n",
     "</br>\n",
     "\n",
     "* Point gap difference is not due to difference in racial proportions\n",
